ghc-4335c07/testsuite/tests/deriving/should_fail/T8984.stderr

T8984.hs:7:46: error:
    Couldn't match representation of type ‘cat a (N cat a Int)’
                             with that of ‘cat a (cat a Int)’
      arising from the coercion of the method ‘app’
        from type ‘cat a (cat a Int)’ to type ‘N cat a (N cat a Int)’
    NB: We cannot know what roles the parameters to ‘cat a’ have;
      we must assume that the role is nominal
    When deriving the instance for (C (N cat a))
